--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=8000
-MONGO_URI=mongodb+srv://nandypritam54:esiqSy6kXEVxiarh@cluster0.vrarhdm.mongodb.net/
+MONGO_URI=mongodb+srv://<username>:<password>@cluster0.vrarhdm.mongodb.net/
